# EmbaralhaPalavra

./: embaralha.py  embaralhatemas.py  pyproject.toml
