[tool.poetry]
name = "embaralha_matheus"
version = "0.1.0"
description = ""
authors = ["Matheus Daniel de Macedo Rosa <matheusdmrosa@gmail>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
